# DSAP_project_Chronoslit

./: README.md
docs/: competitive_analysis.md
src/: CMakeLists.txt  Main.qml  event.h  interval_tree.cpp  interval_tree.h  logo.icns  main.cpp  main_benchmark.cpp  scheduler_controller.h
